feat(backend): scale generated shopping list in provisioning module by a serving size multiplier